# project-calendar-core

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile.  README.md  docker-compose.yml  fix_includes.sh  main.cpp
.github/workflows/: linter.yaml
API/: CalendarController.cc
docs/: database.html  index.html  openapi.html  openapi.yaml  permissions.html
include/API/: TaskController.hpp
include/models/: AuditLog.hpp  ConflictResolution.hpp  Delegation.hpp  ProjectAllocation.hpp  RolePermission.hpp  SuperProject.hpp  TaskAssignment.hpp  TaskDependency.hpp  UserWorkSchedule.hpp
migrations/: 001_schema.sql  002_test_data.sql
models/: AppUser.h  Delegation.cc  DelegationPermission.cc  DelegationPermission.h  GlobalRoleGrant.cc  GlobalRoleGrant.h  Permission.cc  Permission.h  ProjectAllocation.cc  RolePermission.cc  SuperProjectLink.cc  SuperProjectLink.h  Task.cc  Task.h  TaskAssignment.cc  TaskDependency.cc  TaskRoleAssignment.h  TaskSchedule.cc  UserWorkSchedule.cc
setup/: SETUP.md  setup-drogon.sh
src/: main.cc  main.cpp
src/API/: AuthController.cc  AuthController.cpp  AuthController.h  AuthFilter.cc  AuthFilter.cpp  AuthFilter.h  CalendarController.cpp  CalendarController.h  TaskController.cc  TaskController.cpp  TaskController.h  UserController.cc  UserController.cpp  UsersController.h
src/controllers/: AuthController.cc  AuthController.h
src/filters/: AuthFilter.cc  AuthFilter.h
src/models/: AppUser.cc  AppUser.cpp  AppUser.h  AuditLog.cc  AuditLog.cpp  ConflictResolution.cc  ConflictResolution.cpp  Delegation.cpp  DelegationPermission.cpp  GlobalRoleGrant.cpp  Permission.cpp  ProjectAllocation.cpp  RolePermission.cpp  SuperProject.cc  SuperProject.cpp  SuperProjectLink.cpp  Task.cpp  TaskAssignment.cpp  TaskDependency.cpp  TaskRoleAssignment.cc  TaskRoleAssignment.cpp  TaskSchedule.cpp  TaskSchedule.h  UserWorkSchedule.cc  UserWorkSchedule.cpp  UserWorkSchedule.h
src/services/: JwtService.cc  JwtService.h
test_examples/: example1.cpp  test_auth_filter.cc  test_jwt.cc
tests/: .gitignore  README.md  docker-compose.test.yml  requirements.txt  run_tests.sh  test_api.py
